src/test/deca/codegen/invalid/intermediaire2/arithmetiques/00overflowPlus.deca
// Description:
//    Programme minimaliste testant le débordement de valeur 
//    lors d'une addition de flottants
//
// Resultats:
//    Error: Overflow
//
// Historique:
//    cree le 08/06/2022

{
    float x = 3.4028234664e38;
    x = x + 3.4028234664e38;
}